build_log_itinerary.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\hp\StudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\data\service\ItineraryService.java:46: error: cannot find symbol
        geminiRepository.sendMessage(prompt, new GeminiChatRepository.OnMessageSentListener() {
                                                                     ^
  symbol:   class OnMessageSentListener
  location: class GeminiChatRepository
C:\Users\hp\StudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\data\service\ItineraryService.java:47: error: method does not override or implement a method from a supertype
            @Override
            ^
C:\Users\hp\StudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\data\service\ItineraryService.java:66: error: method does not override or implement a method from a supertype
            @Override
            ^
C:\Users\hp\StudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\data\service\ItineraryService.java:85: error: cannot find symbol
                    p.getDescription(), p.getEntranceFee(), p.getRecommendedDuration()));
                                         ^
  symbol:   method getEntranceFee()
  location: variable p of type Place
C:\Users\hp\StudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\data\service\ItineraryService.java:85: error: cannot find symbol
                    p.getDescription(), p.getEntranceFee(), p.getRecommendedDuration()));
                                                             ^
  symbol:   method getRecommendedDuration()
  location: variable p of type Place
C:\Users\hp\StudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\data\service\ItineraryService.java:203: error: cannot find symbol
            return response.getParts().get(0).getText();
                                             ^
  symbol:   method getText()
  location: interface Part
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: C:\Users\hp\StudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\data\repository\GeminiChatRepository.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
6 errors

[Incubating] Problems report is available at: file:///C:/Users/hp/StudioProjects/moresqplore/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  Note: C:\Users\hp\StudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\data\repository\GeminiChatRepository.java uses unchecked or unsafe operations.
  C:\Users\hp\StudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\data\service\ItineraryService.java:46: error: cannot find symbol
          geminiRepository.sendMessage(prompt, new GeminiChatRepository.OnMessageSentListener() {
                                                                       ^
    symbol:   class OnMessageSentListener
    location: class GeminiChatRepository
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use or override a deprecated API.
  C:\Users\hp\StudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\data\service\ItineraryService.java:47: error: method does not override or implement a method from a supertype
              @Override
              ^
  C:\Users\hp\StudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\data\service\ItineraryService.java:66: error: method does not override or implement a method from a supertype
              @Override
              ^
  C:\Users\hp\StudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\data\service\ItineraryService.java:85: error: cannot find symbol
                      p.getDescription(), p.getEntranceFee(), p.getRecommendedDuration()));
                                           ^
    symbol:   method getEntranceFee()
    location: variable p of type Place
  C:\Users\hp\StudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\data\service\ItineraryService.java:85: error: cannot find symbol
                      p.getDescription(), p.getEntranceFee(), p.getRecommendedDuration()));
                                                               ^
    symbol:   method getRecommendedDuration()
    location: variable p of type Place
  C:\Users\hp\StudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\data\service\ItineraryService.java:203: error: cannot find symbol
              return response.getParts().get(0).getText();
                                               ^
    symbol:   method getText()
    location: interface Part
  6 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 3s
21 actionable tasks: 1 executed, 20 up-to-date
